--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flash Embedding Example</title>
+    <title>Strona Flash</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,10 +31,6 @@
         </object>
         
         <!-- Alternatively, using the embed tag -->
-        <embed src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent">
-            <p>Alternative content for browsers that do not support Flash:</p>
-            <a href="https://ruffle.rs/">Get Adobe Flash Player</a>
-        </embed>
     </div>
 </body>
 </base>
