--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     </style>
 </head>
 <body>
-    <h1>Flash Content Example</h1>
+    <h1>Mój skin Minecraft Ragdoll</h1>
     <div class="flash-container">
         <!-- Using the object tag to embed Flash content -->
         <object type="application/x-shockwave-flash" data="minecraft-skin-ragdoll.swf" width="640" height="480">
             <param name="movie" value="minecraft-skin-ragdoll.swf" />
             <param name="quality" value="high" />
             <param name="wmode" value="transparent" />
-            <p>Alternative content for browsers that do not support Flash:</p>
-            <a href="https://ruffle.rs/">Get Adobe Flash Player</a>
+            <p>Pobierz Flasha (Emulator):</p>
+            <a href="https://ruffle.rs/">Emulator Flasha</a>
         </object>
         
         <!-- Alternatively, using the embed tag -->
