--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     </style>
 </head>
 <body>
-    <h1>Mój skin Minecraft Ragdoll</h1>
+    <h1>Strona Flash</h1>
+    <p>Mój skin Minecraft Ragdoll</p>
     <div class="flash-container">
         <!-- Using the object tag to embed Flash content -->
         <object type="application/x-shockwave-flash" data="minecraft-skin-ragdoll.swf" width="640" height="480">
             <param name="movie" value="minecraft-skin-ragdoll.swf" />
             <param name="quality" value="high" />
             <param name="wmode" value="transparent" />
-            <p>Pobierz Flasha (Emulator):</p>
-            <a href="https://ruffle.rs/">Emulator Flasha</a>
         </object>
+    <p>Pobierz Flasha (Emulator):</p>
+    <a href="https://ruffle.rs/">Emulator Flasha</a>
         
         <!-- Alternatively, using the embed tag -->
     </div>
