--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </object>
     <p>Pobierz Flasha (Emulator):</p>
     <a href="https://ruffle.rs/">Emulator Flasha</a>
+    <a href="https://apps.apple.com/pl/app/puffin-cloud-browser/id472937654?l=pl/">Emulator Flasha (na IOS)</a>
         
         <!-- Alternatively, using the embed tag -->
     </div>
