--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
             <param name="quality" value="high" />
             <param name="wmode" value="transparent" />
         </object>
+
+    <p>Wyścigi</p>
+    <div class="flash-container">
+        <!-- Using the object tag to embed Flash content -->
+        <object type="application/x-shockwave-flash" data="auto-wyscigi.swf" width="640" height="480">
+            <param name="movie" value="auto-wyscigi.swf" />
+            <param name="quality" value="high" />
+            <param name="wmode" value="transparent" />
+        </object>
+        
     <p>Pobierz Flasha (Emulator):</p>
     <a href="https://ruffle.rs/">Emulator Flasha</a>
     <a href="https://apps.apple.com/pl/app/puffin-cloud-browser/id472937654?l=pl/">Emulator Flasha (na IOS)</a>
