--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <p>Pobierz Flasha (Emulator):</p>
     <a href="https://ruffle.rs/">Emulator Flasha</a>
     <a href="https://apps.apple.com/pl/app/puffin-cloud-browser/id472937654?l=pl/">Emulator Flasha (na IOS)</a>
+    <a href="https://archive.org/details/adobe-flash-player-32-0r-0-371-winax/">Flash (orginalny, niedziała z nowymi przeglądarkami)</a>
         
         <!-- Alternatively, using the embed tag -->
     </div>
