--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             <param name="quality" value="high" />
             <param name="wmode" value="transparent" />
         </object>
+
+    <p>Randomowa Piosenka</p>
+    <div class="flash-container">
+        <!-- Using the object tag to embed Flash content -->
+        <object type="application/x-shockwave-flash" data="random-sound.swf" width="640" height="480">
+            <param name="movie" value="random-sound.swf" />
+            <param name="quality" value="high" />
+            <param name="wmode" value="transparent" />
+        </object>
         
     <p>Pobierz Flasha (Emulator):</p>
     <a href="https://ruffle.rs/">Emulator Flasha</a>
