--- a/index.html
+++ b/index.html
@@ -22,31 +22,13 @@
 <body>
     <h1>Strona Flash</h1>
     <p>Mój skin Minecraft Ragdoll</p>
-    <div class="flash-container">
-        <!-- Using the object tag to embed Flash content -->
-        <object type="application/x-shockwave-flash" data="minecraft-skin-ragdoll.swf" width="640" height="480">
-            <param name="movie" value="minecraft-skin-ragdoll.swf" />
-            <param name="quality" value="high" />
-            <param name="wmode" value="transparent" />
-        </object>
+    <embed src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent">
 
     <p>Wyścigi</p>
-    <div class="flash-container">
-        <!-- Using the object tag to embed Flash content -->
-        <object type="application/x-shockwave-flash" data="auto-wyscigi.swf" width="640" height="480">
-            <param name="movie" value="auto-wyscigi.swf" />
-            <param name="quality" value="high" />
-            <param name="wmode" value="transparent" />
-        </object>
+    <embed src="auto-wyscigi.swf" width="640" height="480" quality="high" wmode="transparent">
 
     <p>Randomowa Piosenka</p>
-    <div class="flash-container">
-        <!-- Using the object tag to embed Flash content -->
-        <object type="application/x-shockwave-flash" data="random-sound.swf" width="640" height="480">
-            <param name="movie" value="random-sound.swf" />
-            <param name="quality" value="high" />
-            <param name="wmode" value="transparent" />
-        </object>
+    <embed src="random-sound.swf" width="640" height="480" quality="high" wmode="transparent">
         
     <p>Pobierz Flasha (Emulator):</p>
     <a href="https://ruffle.rs/">Emulator Flasha</a>
