--- a/ruffle.html
+++ b/ruffle.html
@@ -17,7 +17,7 @@
             margin: 0 auto;
         }
     </style>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script src="https://unpkg.com/@ruffle-js/ruffle"></script>
 </head>
 <body>
     <h1>Strona Flash</h1>
