--- a/ruffle.html
+++ b/ruffle.html
@@ -17,10 +17,10 @@
             margin: 0 auto;
         }
     </style>
-    <script src="https://unpkg.com/@ruffle-js/ruffle"></script>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </head>
 <body>
-    <h1>Strona Flash</h1>
+    <h1>Strona Flash (Ruffle)</h1>
     <p>Mój skin Minecraft Ragdoll</p>
     <ruffle-embed src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-embed>
 
