--- a/ruffle.html
+++ b/ruffle.html
@@ -37,6 +37,7 @@
         
         <!-- Alternatively, using the embed tag -->
     </div>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </body>
 </base>
 </html>
