--- a/ruffle.html
+++ b/ruffle.html
@@ -38,6 +38,17 @@
         <!-- Alternatively, using the embed tag -->
     </div>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script>
+        window.RufflePlayer = window.RufflePlayer || {};
+        window.addEventListener("load", (event) => {
+            const ruffle = window.RufflePlayer.newest();
+            const player = ruffle.createPlayer();
+            const container = document.getElementById("container");
+            container.appendChild(player);
+            player.load("minecraft-skin-ragdoll.swf");
+        });
+    </script>
+    <script src="path/to/ruffle/ruffle.js"></script>
 </body>
 </base>
 </html>
