--- a/ruffle.html
+++ b/ruffle.html
@@ -48,7 +48,7 @@
             player.load("minecraft-skin-ragdoll.swf");
         });
     </script>
-    <script src="path/to/ruffle/ruffle.js"></script>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </body>
 </base>
 </html>
