--- a/ruffle.html
+++ b/ruffle.html
@@ -45,7 +45,11 @@
             const player = ruffle.createPlayer();
             const container = document.getElementById("container");
             container.appendChild(player);
-            player.load("minecraft-skin-ragdoll.swf");
+            player.load({
+                // These are only a few example options:
+                url: "minecraft-skin-ragdoll.swf", // A string, indicating the SWF file to load (e.g. "movie.swf").
+                allowScriptAccess: false, // A boolean indicating whether the file is allowed to interact with the page through JavaScript.
+            });
         });
     </script>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
