--- a/ruffle.html
+++ b/ruffle.html
@@ -37,7 +37,7 @@
         
         <!-- Alternatively, using the embed tag -->
     </div>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle" defer></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
         window.addEventListener("load", (event) => {
@@ -52,7 +52,7 @@
             });
         });
     </script>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+    <script src="https://unpkg.com/@ruffle-rs/ruffle" defer></script>
 </body>
 </base>
 </html>
