--- a/ruffle.html
+++ b/ruffle.html
@@ -22,7 +22,7 @@
 <body>
     <h1>Strona Flash (Ruffle)</h1>
     <p>Mój skin Minecraft Ragdoll</p>
-    <ruffle-embed src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-embed>
+    <ruffle-player src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-player>
 
     <p>Wyścigi</p>
     <ruffle-embed src="auto-wyscigi.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-embed>
@@ -37,25 +37,6 @@
         
         <!-- Alternatively, using the embed tag -->
     </div>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle" defer></script>
-    <script>
-        window.RufflePlayer = window.RufflePlayer || {};
-        window.addEventListener("load", (event) => {
-            const ruffle = window.RufflePlayer.newest();
-            const player = ruffle.createPlayer();
-            const container = document.getElementById("container");
-            player.load({
-                // These are only a few example options:
-                url: "minecraft-skin-ragdoll.swf",
-                allowScriptAccess: false,
-            });
-            container.appendChild({
-                // These are only a few example options:
-                url: "minecraft-skin-ragdoll.swf",
-                allowScriptAccess: false,
-            });
-        });
-    </script>
     <script src="https://unpkg.com/@ruffle-rs/ruffle" defer></script>
 </body>
 </base>
