new file:   ruffle-emu/c6dc1819ea543f9809db.wasm

--- a/ruffle.html
+++ b/ruffle.html
@@ -37,7 +37,7 @@
         
         <!-- Alternatively, using the embed tag -->
     </div>
-    <script src="https://unpkg.com/@ruffle-rs/ruffle" defer></script>
+    <script src="ruffle-emu/ruffle.js"></script>
 </body>
 </base>
 </html>
