--- a/ruffle.html
+++ b/ruffle.html
@@ -22,7 +22,7 @@
 <body>
     <h1>Strona Flash (Ruffle)</h1>
     <p>Mój skin Minecraft Ragdoll</p>
-    <ruffle-player src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-player>
+    <ruffle-player src="minecraft-skin-ragdoll.swf" style="width: 640px; height: 480;" width="640" height="480" moz-opaque></ruffle-player>
 
     <p>Wyścigi</p>
     <ruffle-embed src="auto-wyscigi.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-embed>
