--- a/ruffle.html
+++ b/ruffle.html
@@ -22,13 +22,13 @@
 <body>
     <h1>Strona Flash (Ruffle)</h1>
     <p>Mój skin Minecraft Ragdoll</p>
-    <ruffle-player src="minecraft-skin-ragdoll.swf" style="width: 640px; height: 480;" width="640" height="480" moz-opaque></ruffle-player>
+    <embed src="minecraft-skin-ragdoll.swf" width="640" height="480" quality="high" wmode="transparent">
 
     <p>Wyścigi</p>
-    <ruffle-embed src="auto-wyscigi.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-embed>
+    <embed src="auto-wyscigi.swf" width="640" height="480" quality="high" wmode="transparent">
 
     <p>Randomowa Piosenka</p>
-    <ruffle-embed src="random-sound.swf" width="640" height="480" quality="high" wmode="transparent"></ruffle-embed>
+    <embed src="random-sound.swf" width="640" height="480" quality="high" wmode="transparent">
         
     <p>Pobierz Flasha (Emulator):</p>
     <a href="https://ruffle.rs/">Emulator Flasha</a>
